--- a/css/main.css
+++ b/css/main.css
@@ -65,21 +65,28 @@ footer {
 
   #column-1 {
     background-color:#00FFFF;
+    width: 50%;
   }
 
   #column-2 {
     background-color:#8A2BE2;
+    width: 50%;
   }
 
   #column-3 {
     background-color: #A52A2A;
+    width: 100%;
   }
 
   footer {
     background-color: #DEB887;
   }
+
+  .col-3 {
+  	width: 50%;
+  }
   
-}
+
 
 
 /*---------- Desktops ----------*/
@@ -98,11 +105,15 @@ footer {
 
   #column-3 {
     background-color: #556B2F;
+    width: 33.3%
   }
 
   footer {
     background-color: #DEB887;
-   
+  }
+
+  .col-3{
+  	width: 33.3%
   }
    
-}
+
